bugfix: Fixed the issue where the buttons on the devhacks page were not responsive

--- a/src/styles/Hackathon.scss
+++ b/src/styles/Hackathon.scss
@@ -58,8 +58,14 @@
 
     &.btn-wrapper {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       gap: 1rem;
+
+      @include mobile {
+        justify-content: center;
+        gap: 0;
+      }
     }
   }
 
